Beautified and updated z-indexing for dropdown caurosel issue

--- a/team_project/css/index.css
+++ b/team_project/css/index.css
@@ -1,214 +1,223 @@
 /*Left container for filter elements*/
 #container1{
-  width: 15%;
-  margin-top: 100px;
-  float:left;
-  padding: 10px;
-  height: 100%;}
+	width: 15%;
+	margin-top: 100px;
+	float:left;
+	padding: 10px;
+height: 100%;
+}
+
 #content{
-  margin-left: 20px;}
+	margin-left: 20px;
+}
+
 /*Right container for class images*/
 #container2{
-  float:left;
-  width:85%;
-  align-items: center;
-  /*place-content: space-around;  */
-  padding: 10px;}
+	float:left;
+	width:85%;
+	align-items: center;
+	/*place-content: space-around;  */
+	padding: 10px;
+}
 
 /*Container for development team*/
 #devteam {
-  display: grid;
-  /*display: flex;*/
-  grid-template-columns: auto auto auto auto;
-  /*place-content: space-around;  
-  align-content: center;*/
-  margin-left: 25%;
-  text-align:center;
-  vertical-align: middle;
-  width: 50%;
+	display: grid;
+	/*display: flex;*/
+	grid-template-columns: auto auto auto auto;
+	/*place-content: space-around;  
+	align-content: center;*/
+	margin-left: 25%;
+	text-align:center;
+	vertical-align: middle;
+	width: 50%;
 }
+
 /*Dev team title formatting*/
 .devtitle {
-  grid-column: 1 / span 4;
-  font-weight: bold;
-  font-size: 20px;
-  background-color: #013C4D;
-  color: white;
-  padding-top: 5px;
-  border: 2px solid #013C4D;
+	grid-column: 1 / span 4;
+	font-weight: bold;
+	font-size: 20px;
+	background-color: #013C4D;
+	color: white;
+	padding-top: 5px;
+	border: 2px solid #013C4D;
 }
+
 /*Dev team member formatting*/
 .dt {
-  font-size: 22px;
-  font-weight: bold;
-  color:  #013C4D;
-  padding-top: 5px;
-  border: 2px solid #013C4D;
-  place-content: stretch;
+	font-size: 22px;
+	font-weight: bold;
+	color:  #013C4D;
+	padding-top: 5px;
+	border: 2px solid #013C4D;
+	place-content: stretch;
 }
-  
+
 /*Image container formatting*/
 .thumb {
-  margin: auto;
-  padding: 10px;
-  border: 1px solid #ccc;
-  float: left;
-  width: 350px;
-  text-align: center;
-  font-weight: bold;
-  font-size: 16px;
-  text-decoration: none;
-  align-content: center;
-  border-radius: 10px;
-  color: white;}
+	margin: auto;
+	padding: 10px;
+	border: 1px solid #ccc;
+	float: left;
+	width: 350px;
+	text-align: center;
+	font-weight: bold;
+	font-size: 16px;
+	text-decoration: none;
+	align-content: center;
+	border-radius: 10px;
+	color: white;
+}
 
 .thumb a:link, a:visited {
-  text-decoration: none;
-  color: #2F4F4F;
+	text-decoration: none;
+	color: #2F4F4F;
 }
 /*Shrink images to smaller size.*/
 .image {
-  border-radius: 4px;
-  padding: 5px;
-  width: 300px;
-  height: 250px;
-  margin: auto;}
+	border-radius: 4px;
+	padding: 5px;
+	width: 300px;
+	height: 250px;
+	margin: auto;
+}
 
 /*Style for class card
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 300px;
-  max-height: 375px;
-  margin: auto;
-  text-align: center;
-  font-family: arial;
-  float:left;
-  display: inline;
+	.card {
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	max-width: 300px;
+	max-height: 375px;
+	margin: auto;
+	text-align: center;
+	font-family: arial;
+	float:left;
+	display: inline;
 }*/
 /*Display class tiles in line
-.column2 {
-  display: inline;
-}
-.price {
-  color: white;
-  font-size: 22px;
-}
+	.column2 {
+	display: inline;
+	}
+	.price {
+	color: white;
+	font-size: 22px;
+	}
+	
+	.card button {
+	border: none;
+	outline: 0;
+	padding: 5px;
+	color: Black;
+	background-color: #8FBC8F;
+	text-align: center;
+	cursor: pointer;
+	max-width: 300px;
+	font-size: 18px;
+	bottom: 0px;
+	}
+	
+	.card button:hover {
+opacity: 0.7;}*/
 
-.card button {
-  border: none;
-  outline: 0;
-  padding: 5px;
-  color: Black;
-  background-color: #8FBC8F;
-  text-align: center;
-  cursor: pointer;
-  max-width: 300px;
-  font-size: 18px;
-  bottom: 0px;
-}
-
-.card button:hover {
-  opacity: 0.7;
-}*/
 /*Carousel styling*/
 * {box-sizing:
-  border-box
+	border-box
 }
 
 /*Image sizing*/
 .imgss {
-  height: 400px;
-  width: 800px;
-  z-index: -1;
+	height: 400px;
+	width: 800px;
+	z-index: 1;
 }
 /* Slideshow container */
 .slideshow-container {
-  max-width: 800px;
-  position: relative;
-  margin: auto;
-  align-content: center;
-  z-index: 1;
-  pointer-events: auto;
+	max-width: 800px;
+	position: relative;
+	margin: auto;
+	align-content: center;
+	z-index: 1;
+	pointer-events: auto;
 }
 
 /* Hide the images by default */
 .mySlides {
-  display: none;
+	display: none;
 }
 
 /* Next & previous buttons */
 .prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  z-index: 1;
+	cursor: pointer;
+	position: absolute;
+	top: 50%;
+	width: auto;
+	margin-top: -22px;
+	padding: 16px;
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	transition: 0.6s ease;
+	border-radius: 0 3px 3px 0;
+	user-select: none;
+	z-index: 1;
 }
 
 /* Position the "next button" to the right */
 .next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
+	right: 0;
+	border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+	background-color: rgba(0,0,0,0.8);
 }
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
-  font-size: 18px;
-  padding: 8px 12px;
-  position: absolute;
-  font-style: oblique;
-  font-weight: 300;
-  bottom: -25px;
-  width: 100%;
-  text-align: left;
+	color: #f2f2f2;
+	font-size: 18px;
+	padding: 8px 12px;
+	position: absolute;
+	font-style: oblique;
+	font-weight: 300;
+	bottom: -25px;
+	width: 100%;
+	text-align: left;
 }
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
+	color: #f2f2f2;
+	font-size: 12px;
+	padding: 8px 12px;
+	position: absolute;
+	top: 0;
 }
 
 /* The dots/bullets/indicators */
 .dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+	cursor: pointer;
+	height: 15px;
+	width: 15px;
+	margin: 0 2px;
+	background-color: #bbb;
+	border-radius: 50%;
+	display: inline-block;
+	transition: background-color 0.6s ease;
 }
 
 .active, .dot:hover {
-  background-color: #717171;
+	background-color: #717171;
 }
 
 /* Fading animation */
 .fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
+	animation-name: fade;
+	animation-duration: 1.5s;
 }
 
 @keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+	from {opacity: .4}
+	to {opacity: 1}
 }
